--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_squad_sdk: ^0.0.1+3
+  dio: ^5.3.4
+
 
 dev_dependencies:
   flutter_test:
